# discord-bot-framework

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  debug_dice.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py
.claude/: compact.txt  settings.local.json
bot/: __main__.py  cli.py
bot/core/: AGENTS.md  README.md  __init__.py  bot.py  event_system.py  hot_reload.py  message_handler.py  plugin_loader.py  utils.py
bot/database/: __init__.py  manager.py  models.py
bot/middleware/: __init__.py  analytics.py  error_handler.py  logging.py
bot/permissions/: __init__.py  decorators.py  manager.py
bot/plugins/: __init__.py  base.py  mixins.py
bot/web/: __init__.py  app.py  auth.py  manager.py  mixins.py  redis_session.py
config/: settings.py
docs/: framework_analysis.md
docs/permissions/: migration.md  permission_audit.md
lavalink/: application.yml
plugins/: README.md
plugins/admin/: AGENTS.md  README.md  __init__.py  admin.py  admin_plugin.py  config.py  plugin.py  views.py  web_panel.py
plugins/fun/: AGENTS.md  README.md  __init__.py  config.py  fun.py  fun_plugin.py  plugin.py  views.py
plugins/games/: AGENTS.md  TODO.md  __init__.py  config.py  plugin.py
plugins/help/: AGENTS.md  README.md  __init__.py  command_info.py  config.py  embed_generators.py  help.py  plugin.py  views.py
plugins/links/: AGENTS.md  __init__.py  config.py  links_plugin.py  models.py  plugin.py
plugins/moderation/: AGENTS.md  README.md  __init__.py  config.py  moderation.py  moderation_plugin.py  plugin.py
plugins/music/: AGENTS.md  README.md  TODO.md  __init__.py  (+9 more)
tests/: README.md  conftest.py
(+112 files in other folders)
