[project]
name = "bot"
version = "0.1.0"
description = "Modular Discord bot using Hikari framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hikari[speedups]>=2.4.1",
    "hikari-lightbulb>=3.2.1",
    "hikari-miru>=4.2.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "watchfiles>=0.20.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]
plugin-music = [
    "lavalink>=5.9.0",
    "yt-dlp>=2023.7.6",
]

plugins-all = [
    "bot[plugin-music]"
]

[project.scripts]
discord-bot = "bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "config", "plugins"]

[tool.black]
line-length = 135
target-version = ["py311"]

[tool.ruff]
line-length = 135
target-version = "py311"
exclude = ["tests/", "run_tests.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S311", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"plugins/*" = ["S110", "S324", "B026"]
"config/settings.py" = ["S104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bot --cov-report=term-missing"